--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@reach/router": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "typescript": "3.3.3"
